<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SmoothInputLayoutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/smoothinputlayout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/smoothinputlayout_title"/>

    <am.widget.smoothinputlayout.SmoothInputLayout
        android:id="@+id/sil_lyt_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:silInputView="@+id/sil_edt_input"
        app:silInputPane="@+id/sil_lyt_pane">

        <View
            android:id="@+id/sil_v_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_smoothinputlayout_bar"
            android:orientation="horizontal"
            android:padding="5dp">

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/sil_ibtn_voice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_voice"
                android:src="@drawable/ic_smoothinputlayout_voice" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@id/sil_edt_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:inputType="textMultiLine"
                android:layout_weight="1" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/sil_ibtn_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_emoji"
                android:src="@drawable/ic_smoothinputlayout_emoji" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sil_btn_send_voice"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/smoothinputlayout_voice"
                android:background="@drawable/bg_smoothinputlayout_voice"
                android:textColor="#ff959595"
                android:visibility="gone"
                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/sil_ibtn_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:padding="5dp"
                android:contentDescription="@string/cd_smoothinputlayout_more"
                android:src="@drawable/ic_smoothinputlayout_more" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/sil_ibtn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:background="@color/transparent"
                android:padding="5dp"
                android:visibility="gone"
                android:contentDescription="@string/cd_smoothinputlayout_send"
                android:src="@drawable/ic_smoothinputlayout_send" />
        </LinearLayout>

        <FrameLayout
            android:id="@id/sil_lyt_pane"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/sil_lyt_emoji"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/merge_smoothinputlayout_emoji"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sil_lyt_more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <include layout="@layout/merge_smoothinputlayout_more"/>

            </LinearLayout>
        </FrameLayout>

    </am.widget.smoothinputlayout.SmoothInputLayout>

</LinearLayout>
